--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>You Are the Ocean Not the Ripple</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Rate ArthurTV's Irish Accent🇮🇪😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Arthur Broke Character For The First Time!😳💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>60,000€ Profit and All my Strategies are FREE (Download Link)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How Your Posture Affects You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Profitable Traders Have This In Common...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -702,9 +702,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
+                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="HORSE GIRLS CRINGE">
                     <div class="video-info">
-                        <h3>You Laugh you Lose: Horse Girls</h3>
+                        <h3>HORSE GIRLS CRINGE</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">4 days ago</div>
                     </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>60,000€ Profit and All my Strategies are FREE (Download Link)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Profitable Traders Have This In Common...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>You Are the Ocean Not the Ripple</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>How Your Posture Affects You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Rate ArthurTV's Irish Accent🇮🇪😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Broke Character For The First Time!😳💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10415,9 +10415,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
+                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="HORSE GIRLS CRINGE">
                         <div class="video-info">
-                            <h3>You Laugh you Lose: Horse Girls</h3>
+                            <h3>HORSE GIRLS CRINGE</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">4 days ago</div>
                         </div>
